--- a/FTPClient.GUI/MainWindow.xaml
+++ b/FTPClient.GUI/MainWindow.xaml
@@ -4,12 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FTPClient.GUI"
+        xmlns:viewModels="clr-namespace:FTPClient.GUI.ViewModels"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="FTP Client" Height="700" Width="800">
+        Title="FTP Client" Height="700" Width="1200">
 
     <Window.DataContext>
-        <local:MainViewModel/>
+        <viewModels:MainViewModel/>
     </Window.DataContext>
 
     <Grid Margin="8">
@@ -33,8 +34,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="60"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right">主机地址：</TextBlock>
@@ -66,8 +67,28 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <DataGrid Grid.Column="0" Margin="5 0"></DataGrid>
-            <DataGrid Grid.Column="1" Margin="5 0"></DataGrid>
+            <!-- 本地文件 -->
+            <DataGrid Grid.Column="0" Margin="5 0"
+                      ItemsSource="{Binding LocalFiles}" AutoGenerateColumns="False"
+                      IsReadOnly="True" SelectionUnit="FullRow">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="文件名" Width="*" Binding="{Binding FileName}"/>
+                    <DataGridTextColumn Header="大小" Width="120" Binding="{Binding Size}"/>
+                    <DataGridTextColumn Header="修改时间" Binding="{Binding Time}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <!-- 远程文件 -->
+            <DataGrid Grid.Column="1" Margin="5 0"
+                      ItemsSource="{Binding RemoteFiles}" AutoGenerateColumns="False"
+                      IsReadOnly="True" SelectionUnit="FullRow">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="文件名" Width="*" Binding="{Binding FileName}"/>
+                    <DataGridTextColumn Header="大小" Width="120" Binding="{Binding Size}"/>
+                    <DataGridTextColumn Header="修改时间" Binding="{Binding Time}"/>
+                    <DataGridTextColumn Header="权限" Binding="{Binding Grants}"/>
+                    <DataGridTextColumn Header="用户组" Binding="{Binding Owner}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
 
         <!-- 传输队列 -->
@@ -78,8 +99,23 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" VerticalAlignment="Center">传输队列：</TextBlock>
-            <DataGrid Grid.Row="1">
-
+            <DataGrid Grid.Row="1" Margin="5 0"
+                      ItemsSource="{Binding TransferTasks}" AutoGenerateColumns="False"
+                      IsReadOnly="True" SelectionUnit="FullRow">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="本地文件路径" Width="*" Binding="{Binding FilePath}"/>
+                    <DataGridTextColumn Header="方向" Width="100" Binding="{Binding TransferDirection}"/>
+                    <DataGridTextColumn Header="远程文件路径" Width="*" Binding="{Binding RemoteFilePath}"/>
+                    <DataGridTextColumn Header="大小" Width="120" Binding="{Binding Size}"/>
+                    <DataGridTemplateColumn Header="进度" Width="200">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <ProgressBar Minimum="0" Maximum="100" Value="{Binding Progress}"></ProgressBar>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTextColumn Header="状态" Width="120" Binding="{Binding TransferStatus}"/>
+                </DataGrid.Columns>
             </DataGrid>
         </Grid>
 
