√对接ViewModel中的部分命令 1. 连接 2. 断开 3. 列出文件 4. 切换工作目录

--- a/FTPClient.GUI/MainWindow.xaml
+++ b/FTPClient.GUI/MainWindow.xaml
@@ -130,7 +130,7 @@
                     <DataGrid.InputBindings>
                         <MouseBinding Gesture="LeftDoubleClick" 
                                       Command="{Binding ChangeRemoteDirectoryCommand}" 
-                                      CommandParameter="{Binding Path=SelectedItem.FilePath, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" />
+                                      CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}}" />
                     </DataGrid.InputBindings>
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="文件名" Width="*">
