--- a/FTPClient.GUI/MainWindow.xaml
+++ b/FTPClient.GUI/MainWindow.xaml
@@ -244,7 +244,7 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="0" VerticalAlignment="Center">日志：</TextBlock>
-            <TextBox Grid.Row="1" AcceptsReturn="True" IsReadOnly="True"/>
+            <RichTextBox x:Name="richTextBox_Log"  Grid.Row="1" AcceptsReturn="True" IsReadOnly="True"/>
         </Grid>
 
         <!-- 命令 -->
