--- a/FTPClient.GUI/MainWindow.xaml
+++ b/FTPClient.GUI/MainWindow.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="32"/>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="24"/>
         </Grid.RowDefinitions>
 
