--- a/FTPClient.GUI/MainWindow.xaml
+++ b/FTPClient.GUI/MainWindow.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="FTP Client" Height="700" Width="1200"
+        WindowState="Maximized"
         Closing="MainWindow_OnClosing" Closed="MainWindow_OnClosed">
 
     <Window.DataContext>
@@ -21,7 +22,7 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="24"/>
+            <RowDefinition Height="32"/>
         </Grid.RowDefinitions>
 
         <!-- FTP服务器参数区域 -->
@@ -35,27 +36,33 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="60"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right">主机地址：</TextBlock>
-            <TextBox Grid.Column="1" VerticalAlignment="Center"  Text="{Binding Host}" IsEnabled="{Binding NotConnected}"/>
+            <TextBlock Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right">内核：</TextBlock>
+            <ComboBox Grid.Column="1" VerticalAlignment="Center" Margin="0 0 8 0" IsEditable="False" IsEnabled="{Binding NotConnected}"
+                      ItemsSource="{Binding FTPCores}" SelectedItem="{Binding CurrentFTPCore}"/>
 
-            <TextBlock Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right">端口：</TextBlock>
-            <TextBox Grid.Column="3" VerticalAlignment="Center" Text="{Binding Port}" IsEnabled="{Binding NotConnected}"/>
+            <TextBlock Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right">主机地址：</TextBlock>
+            <TextBox Grid.Column="3" VerticalAlignment="Center"  Text="{Binding Host}" IsEnabled="{Binding NotConnected}"/>
 
-            <TextBlock Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right">用户名：</TextBlock>
-            <TextBox Grid.Column="5" VerticalAlignment="Center" Text="{Binding Username}" IsEnabled="{Binding NotConnected}"/>
+            <TextBlock Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right">端口：</TextBlock>
+            <TextBox Grid.Column="5" VerticalAlignment="Center" Text="{Binding Port}" IsEnabled="{Binding NotConnected}"/>
 
-            <TextBlock Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Right">密码：</TextBlock>
-            <TextBox Grid.Column="7" VerticalAlignment="Center"  Text="{Binding Password}" IsEnabled="{Binding NotConnected}"/>
+            <TextBlock Grid.Column="6" VerticalAlignment="Center" HorizontalAlignment="Right">用户名：</TextBlock>
+            <TextBox Grid.Column="7" VerticalAlignment="Center" Text="{Binding Username}" IsEnabled="{Binding NotConnected}"/>
 
-            <Button Grid.Column="8" Width="80" Content="连接" 
+            <TextBlock Grid.Column="8" VerticalAlignment="Center" HorizontalAlignment="Right">密码：</TextBlock>
+            <TextBox Grid.Column="9" VerticalAlignment="Center"  Text="{Binding Password}" IsEnabled="{Binding NotConnected}"/>
+
+            <Button Grid.Column="10" Width="80" Content="连接" 
                     VerticalAlignment="Center" HorizontalAlignment="Center"
                     IsEnabled="{Binding NotConnected}"
                     Command="{Binding ConnectFtpServerCommand}"/>
-            <Button Grid.Column="9" Width="80" Content="断开"
+            <Button Grid.Column="11" Width="80" Content="断开"
                     VerticalAlignment="Center" HorizontalAlignment="Center"
                     IsEnabled="{Binding Connected}"
                     Command="{Binding DisconnectFromFtpServeCommand}"/>
@@ -258,7 +265,6 @@
             <TextBlock Grid.Row="0" VerticalAlignment="Center">命令：</TextBlock>
             <TextBox Grid.Column="1"/>
         </Grid>
-
 
     </Grid>
 </Window>
